--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "decimal.js": "^10.6.0",
     "dotenv": "^16.4.7",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^6.12.0",
     "openai": "^4.77.0",
     "uuid": "^11.0.5"
