--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tavily/core": "^0.5.6",
     "bcryptjs": "^3.0.3",
     "decimal.js": "^10.6.0",
     "dotenv": "^16.4.7",
